--- a/klassenbuch/package.json
+++ b/klassenbuch/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://snrau.github.io/Klassenbuch/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,5 +13,8 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "svelte": "^5.15.0",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
